Bug 1964293 - Prevent opaque background-image optimization from confusing canvas background code. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D247738